[package]
name = "rchain_db"
version = "0.1.0"
authors = ["Antoine Belluard <abelluard@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "^0.12"
rust-crypto = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
tide = "^0.6"
tokio = { version = "^0.2", features = ["full"] }

[dev-dependencies]
reqwest = { version = "^0.10", features = ["json", "cookies"] }
futures-await-test = "^0.3"
